--- a/src/components/middle/message/_message-content.scss
+++ b/src/components/middle/message/_message-content.scss
@@ -164,12 +164,12 @@
 
   &.text .media-inner,
   &.is-reply .media-inner {
-    margin-left: -0.5625rem;
-    margin-right: -0.5625rem;
+    margin-left: -0.5rem;
+    margin-right: -0.5rem;
   }
 
   &.text .media-inner {
-    margin-top: -0.375rem;
+    margin-top: -0.3125rem;
   }
 
   &.is-reply .media-inner,
